--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1 w-100 text-center">Weather Dashboard</span>
+        <span class="navbar-brand mb-0 h1 w-100 text-center"> Ayo 21's Weather Dashboard</span>
     </nav>
     <div class="container">
         <div class="row">
